// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Task Component -  should render completed state correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "height": 60,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Object {
        "borderBottomColor": "rgb(231,231,231)",
        "borderBottomWidth": 2,
        "flex": 1,
        "flexDirection": "row",
        "height": 60,
        "padding": 15,
      }
    }
  >
    <Image
      source={
        Object {
          "process": [Function],
        }
      }
      style={
        Object {
          "height": 20,
          "marginRight": 10,
          "marginTop": 4,
          "width": 20,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgb(164, 164, 164)",
          "fontFamily": "Avenir",
          "fontSize": 21,
        }
      }
    >
      Test Components
    </Text>
  </View>
</View>
`;

exports[`Task Component -  should render correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "height": 60,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Object {
        "borderBottomColor": "rgb(231,231,231)",
        "borderBottomWidth": 2,
        "flex": 1,
        "flexDirection": "row",
        "height": 60,
        "padding": 15,
      }
    }
  >
    <Image
      source={
        Object {
          "process": [Function],
        }
      }
      style={
        Object {
          "height": 20,
          "marginRight": 10,
          "marginTop": 4,
          "width": 20,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontFamily": "Avenir",
          "fontSize": 21,
        }
      }
    >
      Test Components
    </Text>
  </View>
</View>
`;
